<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/prussian_blue"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".SignIn">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/storix"
        android:transitionName="logo_img"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/text_view_greetings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:transitionName="@string/app_name"
        android:text="@string/greetings"
        android:textColor="@color/white"
        android:textSize="45sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:transitionName="@string/username"
            android:hint="@string/username"
            app:hintTextColor="@color/white"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingStart="5dp"
                android:drawableStart="@drawable/profile"
                android:drawablePadding="10dp"
                android:textColor="@color/white"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:transitionName="@string/password"
            android:hint="@string/password"
            app:hintTextColor="@color/white"
            app:passwordToggleEnabled="true"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingStart="5dp"
                android:drawableStart="@drawable/password"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/transparent"
        android:transitionName="@string/forgot_password"
        android:text="@string/forgot_password"
        android:layout_gravity="right"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:transitionName="@string/sign_in"
        android:text="@string/sign_in"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/button_new_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/transparent"
        android:transitionName="@string/new_user_sign_up"
        android:text="@string/new_user_sign_up"
        android:layout_gravity="right"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:ignore="RtlHardcoded" />
</LinearLayout>